--- a/villa.html
+++ b/villa.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>villaManurias</title>
+	<script src="villa.js"></script>
 </head>
 <body>
 	<canvas widht="500" height="500" id="villaManurias"></canvas>
